RR Add productAdmain

--- a/gumandhealth.client/src/app/components/header/header.component.html
+++ b/gumandhealth.client/src/app/components/header/header.component.html
@@ -17,7 +17,8 @@
               <li><a routerLink="/gyms" routerLinkActive="active">Gyms</a></li>
               <li><a routerLink="/shop" routerLinkActive="active">Shop</a></li>
               <li><a routerLink="/admin" routerLinkActive="active">Admin</a></li>
-              <li><a routerLink="/testimonials" routerLinkActive="active">Testimonials</a></li>
+              <li><a routerLink="/admin" routerLinkActive="active">Admin</a></li>
+             
               <li class="cart-link"><a routerLink="/cart" routerLinkActive="active"><i class="fa fa-cart-shopping"></i></a> <span class="cart-page">{{cartService.getTotalItems()}}</span> </li>
 
               <li *ngIf="isLoggedIn"><a routerLink="/profile" routerLinkActive="active">Profile</a></li>
