--- a/gumandhealth.client/src/app/components/home/home.component.css
+++ b/gumandhealth.client/src/app/components/home/home.component.css
@@ -5,5 +5,35 @@
   border-radius: 5px;
   text-align: center;
 }
+.testimonial-content {
+  background-color: #f9f9f9;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 2rem;
+  margin: 2rem auto;
+  max-width: 600px;
+}
 
-  
+  .testimonial-content img {
+    border: 4px solid #ddd;
+  }
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  background-color: #333;
+  border-radius: 50%;
+}
+
+.carousel-indicators [class*='active'] {
+  background-color: #333;
+}
+
+h5 {
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
+}
+
+p {
+  font-size: 1rem;
+  color: #555;
+}
