--- a/gumandhealth.client/src/app/pages/single-gym/single-gym.component.html
+++ b/gumandhealth.client/src/app/pages/single-gym/single-gym.component.html
@@ -18,7 +18,7 @@
       <!-- Image on the left -->
       <div class="col-lg-6">
         <div class="gym-details-image">
-          <img src="../../../assets/img/Gyms/{{singleGymData.imagePath}}" alt="{{singleGymData.name}}" class="img-fluid">
+          <img src="https://localhost:7280/api/RecipeCategory/getImage/{{singleGymData.imagePath}}" alt="{{singleGymData.name}}" class="img-fluid">
         </div>
       </div>
 
