--- a/gumandhealth.client/src/app/pages/admin/edit-schedule/edit-schedule.component.html
+++ b/gumandhealth.client/src/app/pages/admin/edit-schedule/edit-schedule.component.html
@@ -1,13 +1,18 @@
-<div class="col-sm-12 col-xl-4" style="margin-left:20%; margin-top:5%;">
+<div class="col-sm-12 col-xl-4" style="margin-left:40%; margin-top:5%;">
   <div class="bg-light rounded h-100 p-4">
     <h6 class="mb-4">Edit Schedule</h6>
     <form [formGroup]="scheduleForm" (ngSubmit)="onSubmit()">
       <div class="row mb-3">
         <label class="col-sm-2 col-form-label">Class</label>
         <div class="col-sm-10">
-          <input formControlName="classId" type="number" class="form-control" />
+          <select formControlName="classId" class="form-control">
+            <option *ngFor="let class of classes" [value]="class.id">
+              {{ class.name }}
+            </option>
+          </select>
         </div>
       </div>
+
       <div class="row mb-3">
         <label class="col-sm-2 col-form-label">Day</label>
         <div class="col-sm-10">
@@ -26,14 +31,24 @@
           <input type="time" formControlName="endTime" class="form-control" />
         </div>
       </div>
-
       <div class="row mb-3">
         <label class="col-sm-2 col-form-label">Instructor</label>
         <div class="col-sm-10">
-          <input formControlName="instructorId" type="number" class="form-control" />
+          <select formControlName="instructorId" class="form-control">
+            <option *ngFor="let instructor of instructors" [value]="instructor.id">
+              {{ instructor.name }}
+            </option>
+          </select>
         </div>
       </div>
+
+      <button type="button" class="btn btn-danger" (click)="deleteSchedule()">Delete Schedule</button>
+
       <button type="submit" class="btn btn-primary">Update Schedule</button>
     </form>
   </div>
 </div>
+
+
+
+<app-admin></app-admin>
