--- a/gumandhealth.client/src/app/pages/admin/get-product/get-product.component.html
+++ b/gumandhealth.client/src/app/pages/admin/get-product/get-product.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-4">
-  <h2 class="text-center mb-4">List of Instructors</h2>
+  <h2 class="text-center mb-4">Products</h2>
 
   <table class="table table-striped table-bordered">
     <thead class="thead-dark">
