--- a/gumandhealth.client/src/app/pages/admin/admin.component.html
+++ b/gumandhealth.client/src/app/pages/admin/admin.component.html
@@ -166,7 +166,7 @@
           </li>
 
 
-          
+
 
 
 
@@ -232,7 +232,13 @@
               <span class="badge badge-pill badge-primary">Beta</span>
             </a>
           </li>
-
+          <li>
+            <a routerLink="/Messages">
+              <i class="fa fa-book"></i>
+              <span>Messages </span>
+              <span class="badge badge-pill badge-primary">Beta</span>
+            </a>
+          </li>
 
 
         </ul>
