--- a/gumandhealth.client/src/app/pages/admin/admin.component.html
+++ b/gumandhealth.client/src/app/pages/admin/admin.component.html
@@ -94,7 +94,7 @@
           <li class="sidebar-dropdown">
             <a routerLink="/AllClasses">
               <i class="fa fa-shopping-cart"></i>
-              <span>Classesee</span>
+              <span>Classes</span>
               <span class="badge badge-pill badge-danger">3</span>
             </a>
 
