--- a/gumandhealth.client/src/app/pages/admin/admin.component.html
+++ b/gumandhealth.client/src/app/pages/admin/admin.component.html
@@ -69,28 +69,28 @@
             <span>General</span>
           </li>
           <!--<li class="sidebar-dropdown">
-            <a href="#">
-              <i class="fa fa-tachometer-alt"></i>
-              <span>Dashboard</span>
-              <span class="badge badge-pill badge-warning">New</span>
-            </a>
-            <div class="sidebar-submenu">
-              <ul>
-                <li>
-                  <a href="#">
-                    Dashboard 1
-                    <span class="badge badge-pill badge-success">Pro</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">Dashboard 2</a>
-                </li>
-                <li>
-                  <a href="#">Dashboard 3</a>
-                </li>
-              </ul>
-            </div>
-          </li>-->
+    <a href="#">
+      <i class="fa fa-tachometer-alt"></i>
+      <span>Dashboard</span>
+      <span class="badge badge-pill badge-warning">New</span>
+    </a>
+    <div class="sidebar-submenu">
+      <ul>
+        <li>
+          <a href="#">
+            Dashboard 1
+            <span class="badge badge-pill badge-success">Pro</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">Dashboard 2</a>
+        </li>
+        <li>
+          <a href="#">Dashboard 3</a>
+        </li>
+      </ul>
+    </div>
+  </li>-->
           <li class="sidebar-dropdown">
             <a routerLink="/AllClasses">
               <i class="fa fa-shopping-cart"></i>
@@ -118,12 +118,12 @@
             </div>
           </li>
           <li class="sidebar-dropdown">
-        
-              <!--<i class="far fa-gem"></i>
-              <span>Schedule</span>
-            <a routerLink="/GetInstructor">
-              GetInstructor
-            </a>-->
+
+            <!--<i class="far fa-gem"></i>
+      <span>Schedule</span>
+    <a routerLink="/GetInstructor">
+      GetInstructor
+    </a>-->
 
 
 
@@ -152,39 +152,39 @@
                 </li>
               </ul>
             </div>
-          <div class="sidebar-submenu">
-            <ul>
-              <li>
-                <a href="#">General</a>
-              </li>
-              <li>
-                <a href="#">Panels</a>
-              </li>
-              <li>
-                <a href="#">Tables</a>
-              </li>
-              <li>
-                <a href="#">Icons</a>
-              </li>
-              <li>
-                <a href="#">Forms</a>
-              </li>
-            </ul>
-          </div>
+            <div class="sidebar-submenu">
+              <ul>
+                <li>
+                  <a href="#">General</a>
+                </li>
+                <li>
+                  <a href="#">Panels</a>
+                </li>
+                <li>
+                  <a href="#">Tables</a>
+                </li>
+                <li>
+                  <a href="#">Icons</a>
+                </li>
+                <li>
+                  <a href="#">Forms</a>
+                </li>
+              </ul>
+            </div>
           </li>
           <li class="sidebar-dropdown">
             <!--<a href="#">
-    <i class="fa fa-chart-line"></i>
-    <span>Charts</span>
-  </a>-->
-          
+      <i class="fa fa-chart-line"></i>
+      <span>Charts</span>
+    </a>-->
+
 
             <a routerLink="/recipe-category-admin">
               <span>
                 <i class="fa fa-chart-line"></i>
                 Recipe
-                </span>
-</a>
+              </span>
+            </a>
             <div class="sidebar-submenu">
               <ul>
                 <li>
@@ -223,14 +223,19 @@
           </li>
           <li>
             <a routerLink="/Allschedule">
-            <i class="fa fa-book"></i>
-            <span>Allschedule </span>
-            <span class="badge badge-pill badge-primary">Beta</span>
+              <i class="fa fa-book"></i>
+              <span>Allschedule </span>
+              <span class="badge badge-pill badge-primary">Beta</span>
             </a>
           </li>
-         
-          
-         
+
+          <li>
+            <a routerLink="/get-gym-all">
+              <i class="fa fa-dumbbell"></i>
+              <span>ALL Gyms</span>
+            </a>
+          </li>
+
         </ul>
       </div>
       <!-- sidebar-menu  -->
