--- a/gumandhealth.client/src/app/pages/admin/recipe-category-admin/recipe-category-admin.component.html
+++ b/gumandhealth.client/src/app/pages/admin/recipe-category-admin/recipe-category-admin.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <!-- زر إضافة فئة جديدة -->
-  <div class="text-end mb-3">
-    <button class="btn btn-dark" (click)="addCategory()">Add New Category</button>
+  <div class="text-right mb-4">
+    <button class="btn btn-dark mb-5" (click)="addCategory()" style="width:400px">Add New Category</button>
   </div>
 
   <!-- بدء الجدول مع توسيطه -->
