--- a/gumandhealth.client/src/app/pages/gyms/gyms.component.html
+++ b/gumandhealth.client/src/app/pages/gyms/gyms.component.html
@@ -1,16 +1,14 @@
-<!-- Hero Section Begin -->
-<div class="hero-section set-bg" [style.backgroundImage]="'url(/assets/img/classes-bg.jpg)'">
+<div class="hero-section set-bg" [style.backgroundImage]="'url(/assets/img/Vary-your-cardio-1.jpg)'">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
-        <div class="hero-text">
-          <h1 >Local Gyms</h1>
+        <div class="hero-text" style="position: absolute; top: 50%; left: 50%; transform: translate(-60%, -87%); color: white; font-size:20px">
+          <h2 style="color: white; font-size: 50px;">Gyms</h2>
         </div>
       </div>
     </div>
   </div>
 </div>
-<!-- Hero Section End -->
 <!-- Gyms Section Begin -->
 
 
