--- a/gumandhealth.client/src/app/pages/single-gym/single-gym.component.html
+++ b/gumandhealth.client/src/app/pages/single-gym/single-gym.component.html
@@ -1,16 +1,16 @@
-<!-- Hero Section Begin -->
-<div class="hero-section set-bg" [style.backgroundImage]="'url(/assets/img/classes-bg.jpg)'">
+<div class="hero-section set-bg" [style.backgroundImage]="'url(/assets/img/Vary-your-cardio-1.jpg)'">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
-        <div class="hero-text">
-          <h1>{{singleGymData.name}}</h1>
+        <div class="hero-text" style="position: absolute; top: 50%; left: 50%; transform: translate(-60%, -87%); color: white; font-size:20px">
+          <h2 style="color: white; font-size: 50px;">
+           {{singleGymData.name}}
+          </h2>
         </div>
       </div>
     </div>
   </div>
 </div>
-<!-- Hero Section End -->
 <!-- Single Gym Details Section Begin -->
 <div class="gym-details-section spad">
   <div class="container">
@@ -55,7 +55,7 @@
 
           <!-- Subscribe Button -->
           
-          <button class="subscribe-button btn-primary" (click)="addUserSubscription(singleGymData.id)">Subscribe Now</button>
+          <button class="join-button" (click)="addUserSubscription(singleGymData.id)">Join the gym</button>
 
         </div>
       </div>
