--- a/gumandhealth.client/src/app/pages/admin/admin.component.html
+++ b/gumandhealth.client/src/app/pages/admin/admin.component.html
@@ -28,69 +28,16 @@
   <nav id="sidebar" class="sidebar-wrapper">
     <div class="sidebar-content">
       <div class="sidebar-brand">
-        <a href="#">pro sidebar</a>
-        <div id="close-sidebar">
-          <i class="fas fa-times"></i>
-        </div>
+        <a href="#">Admin</a>
+       
       </div>
-      <div class="sidebar-header">
-        <!--<div class="user-pic">
-          <img class="img-responsive img-rounded" src="https://raw.githubusercontent.com/azouaoui-med/pro-sidebar-template/gh-pages/src/img/user.jpg"
-            alt="User picture">
-        </div>-->
-        <!--<div class="user-info">
-          <span class="user-name">Jhon
-            <strong>Smith</strong>
-          </span>
-          <span class="user-role">Administrator</span>
-          <span class="user-status">
-            <i class="fa fa-circle"></i>
-            <span>Online</span>
-          </span>
-        </div>-->
-      </div>
-      <!-- sidebar-header  -->
-      <!--<div class="sidebar-search">
-        <div>
-          <div class="input-group">
-            <input type="text" class="form-control search-menu" placeholder="Search...">
-            <div class="input-group-append">
-              <span class="input-group-text">
-                <i class="fa fa-search" aria-hidden="true"></i>
-              </span>
-            </div>
-          </div>
-        </div>
-      </div>-->
-      <!-- sidebar-search  -->
+      
       <div class="sidebar-menu">
         <ul>
           <li class="header-menu">
             <span>General</span>
           </li>
-          <!--<li class="sidebar-dropdown">
-    <a href="#">
-      <i class="fa fa-tachometer-alt"></i>
-      <span>Dashboard</span>
-      <span class="badge badge-pill badge-warning">New</span>
-    </a>
-    <div class="sidebar-submenu">
-      <ul>
-        <li>
-          <a href="#">
-            Dashboard 1
-            <span class="badge badge-pill badge-success">Pro</span>
-          </a>
-        </li>
-        <li>
-          <a href="#">Dashboard 2</a>
-        </li>
-        <li>
-          <a href="#">Dashboard 3</a>
-        </li>
-      </ul>
-    </div>
-  </li>-->
+          
           <li class="sidebar-dropdown">
             <a routerLink="/AllClasses">
               <i class="fa fa-shopping-cart"></i>
@@ -108,12 +55,6 @@
 
 
 
-                <li>
-                  <a href="#">Orders</a>
-                </li>
-                <li>
-                  <a href="#">Credit cart</a>
-                </li>
               </ul>
             </div>
           </li>
@@ -146,21 +87,7 @@
             </div>
             <div class="sidebar-submenu">
               <ul>
-                <li>
-                  <a href="#">General</a>
-                </li>
-                <li>
-                  <a href="#">Panels</a>
-                </li>
-                <li>
-                  <a href="#">Tables</a>
-                </li>
-                <li>
-                  <a href="#">Icons</a>
-                </li>
-                <li>
-                  <a href="#">Forms</a>
-                </li>
+                
               </ul>
             </div>
           </li>
@@ -179,7 +106,7 @@
 
             <a routerLink="//GetAllUser">
               <i class="far fa-gem"></i>
-              <span> GetAllUser</span>
+              <span> Users</span>
             </a>
             <div class="sidebar-submenu">
               <ul>
@@ -260,7 +187,7 @@
           <li class="sidebar-dropdown">
             <a href="/order - admin">
               <i class="fa fa-globe"></i>
-              <span>order</span>
+              <span>Orders</span>
             </a>
             <div class="sidebar-submenu">
               <ul>
@@ -274,27 +201,23 @@
             </div>
           </li>
           <li class="header-menu">
-            <span>Extra</span>
           </li>
           <li>
             <a routerLink="/Allschedule">
               <i class="fa fa-book"></i>
-              <span>Allschedule </span>
-              <span class="badge badge-pill badge-primary">Beta</span>
+              <span>Schedules </span>
             </a>
 
 
             <a routerLink="/home">
               <i class="fa fa-book"></i>
               <span>Home </span>
-              <span class="badge badge-pill badge-primary">Beta</span>
             </a>
           </li>
           <li>
             <a routerLink="/Messages">
               <i class="fa fa-book"></i>
               <span>Messages </span>
-              <span class="badge badge-pill badge-primary">Beta</span>
             </a>
           </li>
 
@@ -303,7 +226,7 @@
           <li>
             <a routerLink="/get-gym-all">
               <i class="fa fa-dumbbell"></i>
-              <span>ALL Gyms</span>
+              <span>Gyms</span>
             </a>
           </li>
 
