--- a/gumandhealth.client/src/app/pages/admin/adminproducts/adminproducts.component.css
+++ b/gumandhealth.client/src/app/pages/admin/adminproducts/adminproducts.component.css
@@ -1,53 +1,58 @@
 .form-table {
   width: 100%;
   max-width: 600px;
-  margin: 20px auto;
+  margin-left:30%;
   border-collapse: collapse;
 }
 
-.form-table td {
-  padding: 10px;
-}
+  .form-table td {
+    padding: 15px;
+    text-align: left;
+  }
 
-.form-table label {
-  font-weight: bold;
-}
+  .form-table label {
+    font-weight: bold;
+  }
 
-.form-table input[type="text"],
-.form-table input[type="number"],
-.form-table textarea {
-  width: 100%;
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
+  .form-table .form-control {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
 
-.form-table input[type="file"] {
-  border: none;
-}
-
-.form-table textarea {
-  resize: vertical;
-  height: 100px;
-}
-
-.submit-row {
+.text-center {
   text-align: center;
 }
 
-.submit-row button {
-  padding: 10px 20px;
+.table {
+  border: 1px solid #ddd;
+}
+
+.table-bordered td {
+  border: 1px solid #ddd;
+}
+
+.btn-primary {
   background-color: #007bff;
-  color: white;
+  padding: 10px 20px;
   border: none;
   border-radius: 4px;
+  color: white;
   cursor: pointer;
 }
 
-.submit-row button:hover {
-  background-color: #0056b3;
+  .btn-primary:hover {
+    background-color: #0056b3;
+  }
+button.btn.btn-primary {
+  background-color: black;
 }
-
-::ng-deep app-header {
-  display: none !important;
+.text-center.mb-4 {
+  margin-top: 4%;
+}
+.custom-heading {
+  font-family: Arial, sans-serif; /* Use the same font family */
+  font-weight: bold;
+  
 }
