--- a/gumandhealth.client/src/app/pages/admin/admin.component.html
+++ b/gumandhealth.client/src/app/pages/admin/admin.component.html
@@ -166,11 +166,11 @@
           </li>
 
 
-            <!--<i class="far fa-gem"></i>
-      <span>Schedule</span>
-    <a routerLink="/GetInstructor">
-      GetInstructor
-    </a>-->
+          <!--<i class="far fa-gem"></i>
+    <span>Schedule</span>
+  <a routerLink="/GetInstructor">
+    GetInstructor
+  </a>-->
 
 
 
@@ -184,7 +184,7 @@
             <div class="sidebar-submenu">
               <ul>
                 <li>
-                 <!--<a routerLink="/GetAllUser"></a>-->
+                  <!--<a routerLink="/GetAllUser"></a>-->
                 </li>
                 <li>
                   <a href="#">Panels</a>
@@ -304,6 +304,12 @@
             <a routerLink="/get-gym-all">
               <i class="fa fa-dumbbell"></i>
               <span>ALL Gyms</span>
+            </a>
+          </li>
+          <li>
+            <a routerLink="/Replay">
+              <i class="fa fa-dumbbell"></i>
+              <span>Replay</span>
             </a>
           </li>
 
