--- a/gumandhealth.client/src/app/pages/admin/edit-schedule/edit-schedule.component.html
+++ b/gumandhealth.client/src/app/pages/admin/edit-schedule/edit-schedule.component.html
@@ -1,6 +1,10 @@
-<div class="col-sm-12 col-xl-4" style="margin-left:40%; margin-top:5%;">
+
+
+<h2 style="margin-left:48%;margin-top:2%;">Schedule Details</h2>
+
+<div class="col-sm-12 col-xl-4" style="margin-left: 40%; margin-top: 4%;">
   <div class="bg-light rounded h-100 p-4">
-    <h6 class="mb-4">Edit Schedule</h6>
+    <h6 class="mb-4"></h6>
     <form [formGroup]="scheduleForm" (ngSubmit)="onSubmit()">
       <div class="row mb-3">
         <label class="col-sm-2 col-form-label">Class</label>
