--- a/gumandhealth.client/src/app/components/home/home.component.css
+++ b/gumandhealth.client/src/app/components/home/home.component.css
@@ -37,3 +37,12 @@ p {
   font-size: 1rem;
   color: #555;
 }
+.card {
+  height: 400px; /* تثبيت ارتفاع الكارد */
+}
+
+.card-img-top {
+  height: 200px; /* تثبيت ارتفاع الصورة */
+  object-fit: cover; /* لجعل الصورة تتناسب داخل الكارد دون أن تتشوه */
+  width: 100%; /* لجعل العرض يتناسب مع عرض الكارد */
+}
