--- a/gumandhealth.client/src/app/pages/admin-class-edit/admin-class-edit.component.html
+++ b/gumandhealth.client/src/app/pages/admin-class-edit/admin-class-edit.component.html
@@ -1,32 +1,26 @@
-
-
-
 <div class="col-sm-12 col-xl-5" style="margin-left: 35%">
   <div class="bg-light rounded h-100 p-4">
     <h6 class="mb-4">Edit Class</h6>
     <form #editClass="ngForm" (ngSubmit)="updateClass(editClass.value)">
       <div class="mb-3">
         <label for="className" class="form-label">Class Name</label>
-        <input type="text" class="form-control" id="className"  name="name" required ngModel>
+        <input type="text" class="form-control" id="className" name="name" required [(ngModel)]="classData.className">
       </div>
       <div class="mb-3">
         <label for="classDescription" class="form-label">Description</label>
-        <input class="form-control" id="classDescription"  name="description" required ngModel>
+        <input class="form-control" id="classDescription" name="description" required [(ngModel)]="classData.description">
       </div>
       <div class="mb-3">
         <label for="classImagePath" class="form-label">Image URL</label>
-        <input accept="image/*" type="file" class="form-control" id="classImagePath"  name="imagePath" required ngModel (change)="changeImage($event)">
+        <input accept="image/*" type="file" class="form-control" id="classImagePath" name="imagePath" (change)="changeImage($event)">
       </div>
       <div class="mb-3">
         <label for="classPrice" class="form-label">Price</label>
-        <input type="number" class="form-control" id="classPrice" name="pricePerMonth" required ngModel>
+        <input type="number" class="form-control" id="classPrice" name="pricePerMonth" required [(ngModel)]="classData.classPrice">
       </div>
    
       <button type="submit" class="btn btn-primary">Save Changes</button>
-      <!--<button type="button" class="btn btn-danger" (click)="deleteClass()">Delete Class</button>-->
     </form>
-
-
   </div>
 </div>
 <app-admin></app-admin>
